--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,6 +12,7 @@
     "com.unity.netcode.gameobjects": "2.1.1",
     "com.unity.probuilder": "6.0.4",
     "com.unity.render-pipelines.universal": "17.0.3",
+    "com.unity.services.multiplayer": "1.0.2",
     "com.unity.test-framework": "1.4.5",
     "com.unity.timeline": "1.8.7",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.10",
